--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ python-dotenv = "^0.21.0"
 SQLAlchemy = "^1.4.41"
 databases = "^0.6.1"
 asyncpg = "^0.26.0"
+requests = "^2.28.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^2.20.0"
 
 [build-system]
 requires = ["poetry-core"]
