--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ requests = "^2.28.1"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
 
+[tool.pytest.ini_options]
+pythonpath = [
+    "."
+]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
