--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,18 +16,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      VAR1: 'HELLO WORLD'
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    - name: Set up env vars
-      run: |
-        touch .env
-        echo VAR1="Hello World" >> .env
-        echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
