Fix typo and remove cat cmd

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    environment: production
+    environment: Production
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       VAR1: 'HELLO WORLD'
@@ -39,5 +39,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        cat ${{ secrets.DATABASE_URL }}
         python -m pytest
