--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ fastapi==0.85.0 ; python_version >= "3.9" and python_version < "4.0"
 greenlet==1.1.3 ; python_version >= "3.9" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "4.0"
 h11==0.13.0 ; python_version >= "3.9" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.9" and python_version < "4"
+psycopg2==2.9.3
 pydantic==1.10.2 ; python_version >= "3.9" and python_version < "4.0"
 python-dotenv==0.21.0 ; python_version >= "3.9" and python_version < "4.0"
 requests==2.28.1 ; python_version >= "3.9" and python_version < "4"
